Prelim javafx implementation of most of it
The javafx app setup is not right, but this is at least a start at moving things into swing package that should have been there, creating fx equivalents, and otherwise setting things up to support fx or swing